--- a/index.html
+++ b/index.html
@@ -2,9 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Biodata</title>
 </head>
 <body>
+<table border='1'>
+    <tr>
+        <td>Nama</td>
+        <td>Dea Gita Anugerah</td>
+    </tr>
 
+    <tr>
+        <td>NIM</td>
+        <td>6701193048</td>
+    </tr>
+
+    <tr>
+        <td>TTL</td>
+        <td>Depok, 5 Agustus 2001</td>
+    </tr>
+
+    <tr>
+        <td>IPK</td>
+        <td>3.67</td>
+    </tr>
+</table>
 </body>
 </html>
