--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
         <td>IPK</td>
         <td>3.67</td>
     </tr>
+    <tr>
+        <td>Pak Pikir</td>
+        <td></td>
+    </tr>
 </table>
 </body>
 </html>
